Fixed: wflow-consoleweb - Property Editor - Repeater field collapsed and expanded mode does not really having a different. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
+++ b/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
@@ -1735,6 +1735,10 @@ body .ui-dialog .button_form.ui-dialog-content{
 .editor-panel-mode.narrow:not(.wider) .property-type-repeater .repeater-row .inputs .property-editor-property textarea{
     max-width: 100%;
 }
+.editor-panel-mode .property-type-repeater .repeater-row.compress{
+    max-height: 66px;
+    overflow: hidden;
+}
 .editor-panel-mode .elementmultiselect {
     background: transparent;
     border: 0;
